Adds detection for Huawei Browser for PC and adds Huawei Browser to Chrome family

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2158,7 +2158,7 @@
     version: "10.0.1.332"
     engine: WebKit
     engine_version: "537.36"
-    family:
+    family: Chrome
 -
   user_agent: Mozilla/5.0 (Linux; Android 9; vivo 1901 Build/PPR1.180610.011; wv) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/62.0.3202.84 Mobile Safari/537.36 VivoBrowser/5.10.0.1
   client:
@@ -4040,3 +4040,12 @@
     engine: Blink
     engine_version: ""
     family: Opera
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.107 Safari/537.36 HBPC/11.0.7.301
+  client:
+    type: browser
+    name: Huawei Browser for PC
+    version: 11.0.7.301
+    engine: WebKit
+    engine_version: "537.36"
+    family: Chrome
