--- a/Tests/fixtures/smartphone-6.yml
+++ b/Tests/fixtures/smartphone-6.yml
@@ -4905,7 +4905,7 @@
     brand: Huawei
     model: Mate 20 Pro
   os_family: Android
-  browser_family: Unknown
+  browser_family: Chrome
 - 
   user_agent: Mozilla/5.0 (Linux; Android 9; LYA-AL00P) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.99 Mobile Safari/537.36
   os:
@@ -4977,7 +4977,7 @@
     brand: Huawei
     model: Mate 20 X
   os_family: Android
-  browser_family: Unknown
+  browser_family: Chrome
 - 
   user_agent: Mozilla/5.0 (Linux; Android 10; EVR-AN00 Build/XXXXX; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/73.0.3683.121 Mobile Safari/537.36
   os:
