--- a/Tests/fixtures/tablet-2.yml
+++ b/Tests/fixtures/tablet-2.yml
@@ -898,7 +898,7 @@
     brand: Huawei
     model: MediaPad M6 8.4
   os_family: Android
-  browser_family: Unknown
+  browser_family: Chrome
 - 
   user_agent: Mozilla/5.0 (Linux; Android 10; VRD-W10 Build/XXXXX; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/76.0.3809.89 Mobile Safari/537.36
   os:
