--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -787,6 +787,11 @@
   name: 'Huawei Browser'
   version: '$1'
 
+# Huawei Browser for PC
+- regex: 'HBPC/(\d+[\.\d]+)'
+  name: 'Huawei Browser for PC'
+  version: '$1'
+
 # vivo Browser
 - regex: 'VivoBrowser(?:/(\d+[\.\d]+))?'
   name: 'vivo Browser'
