Add Blink as default engine

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -786,11 +786,15 @@
 - regex: 'HuaweiBrowser(?:/(\d+[\.\d]+))?'
   name: 'Huawei Browser'
   version: '$1'
+  engine:
+    default: 'Blink'
 
 # Huawei Browser for PC
 - regex: 'HBPC/(\d+[\.\d]+)'
   name: 'Huawei Browser for PC'
   version: '$1'
+  engine:
+    default: 'Blink'
 
 # vivo Browser
 - regex: 'VivoBrowser(?:/(\d+[\.\d]+))?'
