--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -6108,8 +6108,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.0.300
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: phablet
     brand: Xiaomi
