--- a/Tests/fixtures/smartphone-19.yml
+++ b/Tests/fixtures/smartphone-19.yml
@@ -1035,8 +1035,8 @@
     type: browser
     name: Huawei Browser
     version: 11.0.3.304
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: smartphone
     brand: Huawei
@@ -1053,8 +1053,8 @@
     type: browser
     name: Huawei Browser
     version: 10.0.2.331
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: smartphone
     brand: Huawei
@@ -1071,8 +1071,8 @@
     type: browser
     name: Huawei Browser
     version: 11.0.4.300
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: smartphone
     brand: Huawei
@@ -1089,8 +1089,8 @@
     type: browser
     name: Huawei Browser
     version: 11.0.3.304
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: smartphone
     brand: Huawei
@@ -2799,8 +2799,8 @@
     type: browser
     name: Huawei Browser
     version: 11.0.3.304
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: tablet
     brand: Huawei
