--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -1845,8 +1845,8 @@
     type: browser
     name: Huawei Browser
     version: 11.0.5.306
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: smartphone
     brand: Huawei
@@ -4967,8 +4967,8 @@
     type: browser
     name: Huawei Browser
     version: 11.0.4.302
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: smartphone
     brand: Huawei
