--- a/Tests/fixtures/smartphone-27.yml
+++ b/Tests/fixtures/smartphone-27.yml
@@ -1177,8 +1177,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.5.310
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: smartphone
     brand: Huawei
@@ -1213,8 +1213,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.4.301
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: smartphone
     brand: Huawei
@@ -1231,8 +1231,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.5.310
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: smartphone
     brand: Huawei
@@ -1249,8 +1249,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.1.310
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: smartphone
     brand: Huawei
@@ -1969,8 +1969,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.5.310
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: smartphone
     brand: Huawei
@@ -4521,8 +4521,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.4.301
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: smartphone
     brand: Huawei
@@ -6176,8 +6176,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.4.302
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: smartphone
     brand: Huawei
@@ -7414,8 +7414,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.3.300
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: smartphone
     brand: Huawei
@@ -7432,8 +7432,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.5.310
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: smartphone
     brand: Huawei
@@ -7468,8 +7468,8 @@
     type: browser
     name: Huawei Browser
     version: 10.1.2.320
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: smartphone
     brand: Huawei
