--- a/Tests/fixtures/smartphone-6.yml
+++ b/Tests/fixtures/smartphone-6.yml
@@ -4898,8 +4898,8 @@
     type: browser
     name: Huawei Browser
     version: "9.0.2.305"
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: smartphone
     brand: Huawei
@@ -4970,8 +4970,8 @@
     type: browser
     name: Huawei Browser
     version: "9.0.1.323"
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: smartphone
     brand: Huawei
