--- a/Tests/fixtures/tablet-2.yml
+++ b/Tests/fixtures/tablet-2.yml
@@ -891,8 +891,8 @@
     type: browser
     name: Huawei Browser
     version: "10.0.1.333"
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: tablet
     brand: Huawei
