--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -3626,8 +3626,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.5.310
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: tablet
     brand: Huawei
@@ -3644,8 +3644,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.4.301
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: tablet
     brand: Huawei
@@ -3662,8 +3662,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.5.310
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: tablet
     brand: Huawei
@@ -3680,8 +3680,8 @@
     type: browser
     name: Huawei Browser
     version: 11.0.6.305
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: tablet
     brand: Huawei
@@ -3698,8 +3698,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.5.310
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: tablet
     brand: Huawei
@@ -3716,8 +3716,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.5.310
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: tablet
     brand: Huawei
@@ -3734,8 +3734,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.5.310
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: tablet
     brand: Huawei
@@ -3752,8 +3752,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.5.301
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: tablet
     brand: Huawei
@@ -3770,8 +3770,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.5.310
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: tablet
     brand: Huawei
@@ -3788,8 +3788,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.4.301
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: tablet
     brand: Huawei
@@ -5190,8 +5190,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.1.310
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: tablet
     brand: Huawei
@@ -5208,8 +5208,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.3.300
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: tablet
     brand: Huawei
@@ -5226,8 +5226,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.2.301
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: tablet
     brand: Huawei
@@ -5244,8 +5244,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.4.301
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: tablet
     brand: Huawei
@@ -5262,8 +5262,8 @@
     type: browser
     name: Huawei Browser
     version: 11.1.4.301
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: tablet
     brand: Huawei
