--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2156,8 +2156,8 @@
     type: browser
     name: Huawei Browser
     version: "10.0.1.332"
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
     family: Chrome
 -
   user_agent: Mozilla/5.0 (Linux; Android 9; vivo 1901 Build/PPR1.180610.011; wv) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/62.0.3202.84 Mobile Safari/537.36 VivoBrowser/5.10.0.1
