--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -4046,6 +4046,6 @@
     type: browser
     name: Huawei Browser for PC
     version: 11.0.7.301
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
     family: Chrome
