feat(device) detect brand Zuum model: Stellar M2 feat(device) detect brand Hyundai model: Eternity G50 feat(device) detect brand Umax model: VisionBook 10Q Pro feat(device) detect brand ONN model: TBBVNC100005207 feat(device) detect brand iGet models: Smart L103, Smart W10X feat(device) detect brand Archos model: 101 Oxygen 4G
feat(device) added test for brand Alcatel model: 3X (2019) (5048Y, 5048U_EEA)
feat(device) added test for brand DEXP model: Ursus A310

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2409,6 +2409,9 @@ Archos:
     - regex: 'Archos 80 Oxygen(?:[);/ ]|$)'
       device: 'tablet'
       model: '80 Oxygen'
+    - regex: 'Archos 101 Oxygen(?:[);/ ]|$)'
+      device: 'tablet'
+      model: '101 Oxygen 4G'
     - regex: '(?:YL-)?Archos ([^/;]*(?:PAD)[^/;]*) Build'
       device: 'tablet'
       model: '$1'
@@ -8216,7 +8219,7 @@ Hyundai:
       model: 'Hymi 5S Plus'
     - regex: 'E603'
       model: 'E603'
-    - regex: '(?:Hyundai_)?(Eternity_(?:G57L?|G60))'
+    - regex: '(?:Hyundai_)?(Eternity_(?:G57L?|G[56]0))'
       model: '$1'
 
     # explicit tables models
@@ -11630,7 +11633,7 @@ Fourel:
 
 # Meizu
 Meizu:
-  regex: 'Meizu|MZ-[a-z]|(?<!POCO )(M04[05]|MZ-16th(?: Plus)?|MZ-16[st]|M7[12]1C|M35[1356]|M612C|M578CA|M181[36]|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M621C|M1852|M57[18]C|M3[ESX]|M3 Max|M031|m1 metal|M1 E|(?<!Nubia )M2|M2 E|M5s Build|PRO [567]|PRO 7-[HS]| 15 Lite| 16th|MZ-15 (?:Lite|Plus)|15 Plus|MZ-16 X| 16 X| 16T|MX6)(?:[);/ ]|$)'
+  regex: 'Meizu|MZ-[a-z]|(?<!POCO )(M04[05]|MZ-16th(?: Plus)?|MZ-16[st]|M7[12]1C|M35[1356]|M612C|M578CA|M181[36]|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M621C|M1852|M57[18]C|M3[ESX]|M3 Max|M031|m1 metal|M1 E|(?<!Nubia|STELLAR )M2|M2 E|M5s Build|PRO [567]|PRO 7-[HS]| 15 Lite| 16th|MZ-15 (?:Lite|Plus)|15 Plus|MZ-16 X| 16 X| 16T|MX6)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:MZ-)?M571C'
@@ -20816,7 +20819,7 @@ ZTE:
       model: '$1'
 
 Zuum:
-  regex: 'Zuum[ _-]|Android 6.+ UNIQ(?: Build|[);])|(?:ROCKET II|Akus Z|COVET|MAGNO|ONIX S|STEDI|STELLAR(?:[ _](?:Z|PRO|[MP]1))?|GRAVITY [ZM]|AURA X|COVET_PRO_LITE|RONI)(?:[);/ ]|$)'
+  regex: 'Zuum[ _-]|Android 6.+ UNIQ(?: Build|[);])|(?:ROCKET II|Akus Z|COVET|MAGNO|ONIX S|STEDI|STELLAR(?:[ _](?:Z|PRO|[MP]1|M2))?|GRAVITY [ZM]|AURA X|COVET_PRO_LITE|RONI)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Akus Z'
@@ -20841,7 +20844,7 @@ Zuum:
       model: 'Stellar Pro'
     - regex: 'STELLAR PLUS'
       model: 'Stellar Plus'
-    - regex: 'STELLAR ([MP]1|Z)'
+    - regex: 'STELLAR ([MP][12]|Z)'
       model: 'Stellar $1'
     - regex: 'STELLAR MINI'
       model: 'Stellar Mini'
@@ -21309,6 +21312,8 @@ Umax:
       model: 'VisionBook $1Qa 3G'
     - regex: 'VisionBook_10Q_LTE(?:[);/ ]|$)'
       model: 'VisionBook 10Q LTE'
+    - regex: 'VisionBook_10Q_Pro(?:[);/ ]|$)'
+      model: 'VisionBook 10Q Pro'
     - regex: '10A_LTE_eea(?:[);/ ]|$)'
       model: 'VisionBook 10A LTE'
     - regex: 'VB_10Q_Plus(?:[);/ ]|$)'
@@ -21760,7 +21765,7 @@ Zfiner:
 
 # iGet
 iGet:
-  regex: 'SMART[_ ](G10[12]|S7[02]|G71|G81[H]?)(?:[);/ ]|$)'
+  regex: 'SMART[_ ](G10[12]|S7[02]|G71|G81[H]?|L103|W10X)(?:_eea)?(?:[);/ ]|$)'
   device: 'tablet'
   model: 'Smart $1'
 
@@ -21865,7 +21870,7 @@ NEXON:
 
 # ONN (walmart)
 ONN:
-  regex: '(ONA19TB00[327]|10000520[6-9]|O8HD|100026191|100011886|100003561|100011885|100015685-A)(?:[);/ ]|$)'
+  regex: '(ONA19TB00[327]|10000520[6-9]|O8HD|100026191|100011886|100003561|100011885|100015685-A|TBBVNC100005207)(?:[);/ ]|$)'
   device: 'tablet'
   model: '$1'
 
