feat(device) removed a non-existent `CHIA` brand from the brands list feat(device) devices have been moved to  correct brand with a similar name in `GHIA`

--- a/Tests/fixtures/smartphone-27.yml
+++ b/Tests/fixtures/smartphone-27.yml
@@ -8426,7 +8426,7 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: CHIA
+    brand: Ghia
     model: L1
   os_family: Android
   browser_family: Chrome
