--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -540,21 +540,31 @@ RIM:
     - regex: 'BlackBerry'
       model: 'BlackBerry'
 
-# CHIA (www.ghia.com.mx)
-CHIA:
-  regex: 'Ghia_|(SVEGLIO[ _][QH]1|TREO_TAB8G|GTA7WF|GTKIDS7[BVR]|VENUS7)(?:[);/ ]|$)'
+# Ghia or GHIA (www.ghia.com.mx)
+Ghia:
+  regex: 'GHIA|QS702|SVEGLIO[ _][QH]1|VECTOR10\.1|GTKIDS7[BVR]|(?:GTA7WF|VENUS7|TREO_TAB8G)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'SVEGLIO[ _]([QH]1)'
       model: 'Sveglio $1'
+    - regex: 'QS702'
+      model: 'QS702'
+    - regex: 'GHIA_ZEUS_3G'
+      model: 'Zeus 3G'
     - regex: 'GHIA[ _](L1)'
       model: '$1'
-    - regex: 'TREO_TAB8G'
+    - regex: 'GHIA_AXIS7'
+      model: 'Axis 7'
       device: 'tablet'
-      model: 'TREO TAB8G'
+    - regex: 'VECTOR10\.1'
+      model: 'Vector 10.1"'
+      device: 'tablet'
     - regex: 'GTA7WF'
       device: 'tablet'
       model: 'A7 ROJA'
+    - regex: 'TREO_TAB8G'
+      device: 'tablet'
+      model: 'TREO TAB8G'
     - regex: 'GTKIDS7[BVR]'
       device: 'tablet'
       model: 'GT KIDS 7'
@@ -6774,22 +6784,6 @@ Geotel:
     - regex: 'GEOTEL[ _]AMIGO'
       model: 'Amigo'
 
-# Ghia
-Ghia:
-  regex: 'GHIA|QS702|VECTOR10\.1'
-  device: 'smartphone'
-  models:
-    - regex: 'QS702'
-      model: 'QS702'
-    - regex: 'GHIA_ZEUS_3G'
-      model: 'Zeus 3G'
-    - regex: 'GHIA_AXIS7'
-      model: 'Axis 7'
-      device: 'tablet'
-    - regex: 'VECTOR10\.1'
-      model: 'Vector 10.1"'
-      device: 'tablet'
-
 # Gigabyte
 Gigabyte:
   regex: 'GSmart[ _][a-z0-9 ]+(?: Build|\))|Gigabyte-[a-z0-9]+|Simba SX1|GSmart_Classic_Lite|(?<!Eagle )Classic[_ ](?:Joy|Pro)'
@@ -11633,7 +11627,7 @@ Fourel:
 
 # Meizu
 Meizu:
-  regex: 'Meizu|MZ-[a-z]|(?<!POCO )(M04[05]|MZ-16th(?: Plus)?|MZ-16[st]|M7[12]1C|M35[1356]|M612C|M578CA|M181[36]|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M621C|M1852|M57[18]C|M3[ESX]|M3 Max|M031|m1 metal|M1 E|(?<!Nubia|STELLAR )M2|M2 E|M5s Build|PRO [567]|PRO 7-[HS]| 15 Lite| 16th|MZ-15 (?:Lite|Plus)|15 Plus|MZ-16 X| 16 X| 16T|MX6)(?:[);/ ]|$)'
+  regex: 'Meizu|MZ-[a-z]|(?<!POCO )(M04[05]|MZ-16th(?: Plus)?|MZ-16[st]|M7[12]1C|M35[1356]|M612C|M578CA|M181[36]|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M621C|M1852|M57[18]C|M3[ESX]|M3 Max|M031|m1 metal|M1 E|(?<!Nubia |STELLAR )M2|M2 E|M5s Build|PRO [567]|PRO 7-[HS]| 15 Lite| 16th|MZ-15 (?:Lite|Plus)|15 Plus|MZ-16 X| 16 X| 16T|MX6)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:MZ-)?M571C'
