feat(device) detect brand Prestigio models: Muze G5 LTE (PSP5522DUO), Wize U3 (PSP3514DUO, PSP3514DUO_RU), Wize YA3 (PSP3416DUO), Wize Y3 (PSP3406DUO),  Grace 7788 4G (PMT7788_4G), Grace 5791 4G (PMT5791_4G), Grace 5778 4G (PMT5778_4G), Grace 5771 4G (PMT5771_4G)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16469,6 +16469,9 @@ Prestigio:
     - regex: 'PSP3511DUO'
       device: 'smartphone'
       model: 'Muze G3 LTE'
+    - regex: 'PSP5522DUO'
+      device: 'smartphone'
+      model: 'Muze G5 LTE'
     - regex: 'PSP7550DUO(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Muze G7 LTE'
@@ -16493,6 +16496,15 @@ Prestigio:
     - regex: 'PSP7511DUO'
       device: 'smartphone'
       model: 'Muze B7'
+    - regex: 'PSP3514DUO'
+      device: 'smartphone'
+      model: 'Wize U3'
+    - regex: 'PSP3416DUO'
+      device: 'smartphone'
+      model: 'Wize YA3'
+    - regex: 'PSP3406DUO'
+      device: 'smartphone'
+      model: 'Wize Y3'
     - regex: 'PSP3423DUO'
       device: 'smartphone'
       model: 'Wize R3'
@@ -16523,7 +16535,7 @@ Prestigio:
       model: 'Geo Vision Tour 3'
     - regex: 'PGPS7797(?:[);/ ]|$)'
       model: 'Geo Vision Tour 2'
-    - regex: 'PMT(3118|3[12]01|3[12]57)[_ ]([34])G'
+    - regex: 'PMT(3118|3[12]01|3[12]57|7788|5791|577[18])[_ ]([34])G'
       model: 'Grace $1 $2G'
     - regex: 'PMT3287_3G'
       model: 'MultiPad Ranger 8.0 3G'
