--- a/Tests/fixtures/car_browser.yml
+++ b/Tests/fixtures/car_browser.yml
@@ -215,3 +215,21 @@
     model: QUAD-CORE T3 K2001O
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.1; QUAD-CORE T3 k2001-nwd) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4606.85 Safari/537.36
+  os:
+    name: Android
+    version: 7.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 94.0.4606.85
+    engine: Blink
+    engine_version: ""
+  device:
+    type: car browser
+    brand: Allwinner
+    model: QUAD-CORE T3 K2001
+  os_family: Android
+  browser_family: Chrome
