--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3297,7 +3297,7 @@ VGO TEL:
 
 # Vivo (vivo.com.cn, vivo.com)
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/|NOA )vivo(?!(?:Browser)| 4G_r))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V2085A|V202[0345]C?A|V202[2-9]|V205[479]A|V203[0235-8]|V2031[E]?A?|V203[46]A|V204[013]|V204[6789]A|V205[0458]|V206[015689]|V20(?:6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|I2012|V2043_21|V213[346]A|V214[13]A|I1928|V21[12]1A|V2106A|V2109|V2110|V2123A|V2026_21|V210[25]|V2053)(?:[);/ ]|$)'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/|NOA )vivo(?!(?:Browser)| 4G_r))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V2085A|V202[0345]C?A|V202[2-9]|V205[479]A|V203[0235-8]|V2031[E]?A?|V203[46]A|V2036_21|V204[013]|V204[6789]A|V205[0458]|V206[015689]|V20(?:6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|I2012|V2118A|V2045|V2031_21|V2043_21|V213[346]A|V214[13]A|I1928|V21[12]1A|V2106A|V2109|V211[01]|V2123A|V2026_21|V210[25]|V2053)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A(?:[);/ ]|$)'
@@ -3322,6 +3322,8 @@ Vivo:
       model: 'iQOO Neo 855'
     - regex: 'V2055A(?:[);/ ]|$)'
       model: 'iQOO Neo 5'
+    - regex: 'V2118A(?:[);/ ]|$)'
+      model: 'iQOO Neo 5 Lite'
     - regex: 'V1986A(?:[);/ ]|$)'
       model: 'iQOO Z1'
     - regex: 'V2012A(?:[);/ ]|$)'
@@ -3486,7 +3488,7 @@ Vivo:
       model: 'X50 Pro'
     - regex: '(?:V2011A|X50 Pro\+)(?:[);/ ]|$)'
       model: 'X50 Pro Plus'
-    - regex: 'V20(?:46|59)A(?:[);/ ]|$)'
+    - regex: '(?:V20(?:46|59)A|V2045)(?:[);/ ]|$)'
       model: 'X60'
     - regex: 'V2085A(?:[);/ ]|$)'
       model: 'X60t'
@@ -3502,7 +3504,7 @@ Vivo:
       model: 'X$1 Plus'
     - regex: 'vivo Xplay6(?:[);/ ]|$)'
       model: 'X Play 6'
-    - regex: 'vivo 2015(?:_21)?(?:[);/ ]|$)'
+    - regex: 'vivo (?:1929|2015)(?:_21)?(?:[);/ ]|$)'
       model: 'Y1s'
     - regex: 'vivo 1902(?:[);/ ]|$)'
       model: 'Y17'
@@ -3542,6 +3544,8 @@ Vivo:
       model: 'Y20i'
     - regex: 'V2110(?:[);/ ]|$)'
       model: 'Y21s'
+    - regex: 'V2111(?:[);/ ]|$)'
+      model: 'Y21'
     - regex: 'V2023(?:[);/ ]|$)'
       model: 'V20 SE'
     - regex: 'V1901[AT](?:[);/ ]|$)'
@@ -3554,7 +3558,7 @@ Vivo:
       model: 'Y30 (2021)'
     - regex: 'V2066[B]?A(?:[);/ ]|$)'
       model: 'Y30g'
-    - regex: 'V2036(?:[);/ ]|$)'
+    - regex: 'V2036(?:_21)?(?:[);/ ]|$)'
       model: 'Y31'
     - regex: 'V2068A?(?:[);/ ]|$)'
       model: 'Y31s'
@@ -3568,7 +3572,7 @@ Vivo:
       model: 'Y51'
     - regex: 'vivo 1707(?:[);/ ]|$)'
       model: 'Y51 (2015)'
-    - regex: 'V2031(?:[);/ ]|$)'
+    - regex: 'V2031(?:_21)?(?:[);/ ]|$)'
       model: 'Y51s'
     - regex: 'V2054A(?:[);/ ]|$)'
       model: 'Y31s'
@@ -5529,7 +5533,7 @@ E-Boda:
 
 # Easypix
 Easypix:
-  regex: 'EasyPad|EasyPhone'
+  regex: 'EasyPad|(?<!INOI )EasyPhone'
   device: 'smartphone'
   models:
     - regex: '(EasyPhone[^/;]+) Build'
@@ -10323,7 +10327,7 @@ Lenovo:
       model: 'Vibe Z2'
     - regex: '(?:VIBE C|A2020a40)(?:[);/ ]|$)'
       model: 'Vibe C'
-    - regex: 'VIBE X2(?:[);/ ]|$)'
+    - regex: '(?:VIBE X2)(?:[);/ ]|$)'
       model: 'Vibe X2'
     - regex: 'X3(?:a40|c50)(?:[);/ ]|$)'
       model: 'Vibe X3'
@@ -10395,6 +10399,8 @@ Lenovo:
 
     - regex: 'Lenovo K12 Pro'
       model: 'K12 Pro'
+    - regex: 'Lenovo X2(?:-[ER]U)?'
+      model: 'X2'
 
     - regex: 'VR-1541F'  # VR headset
       device: 'wearable'
@@ -10550,7 +10556,7 @@ LG:
       model: 'G2'
     - regex: 'LG-D6(?:18|20)'
       model: 'G2 Mini'
-    - regex: 'LG-D85[012568]|VS985|LGLS990|LGL24(?:[);/ ]|$)'
+    - regex: 'LG-(?:D85[012568]|AS990)|VS985|LGLS990|LGL24(?:[);/ ]|$)'
       model: 'G3'
     - regex: 'LG-D722'
       model: 'G3S'
@@ -10612,6 +10618,8 @@ LG:
       model: 'Tribute'
     - regex: '(?:LG-)?H50[02]'
       model: 'Magna'
+    - regex: 'LGL63BL'
+      model: 'Fiesta'
     - regex: 'LG-(?:X15[05]|X165g)'
       model: 'Bello 2'
     - regex: 'LG-D33[15]'
@@ -10638,6 +10646,8 @@ LG:
       model: 'Optimus One'
     - regex: 'LG-E975'
       model: 'Optimus G'
+    - regex: 'LG-F240[KLS]'
+      model: 'Optimus G Pro'
     - regex: 'LG-E435f'
       model: 'Optimus L3 II'
     - regex: 'LG-E4(?:70f|40|65f)'
@@ -10738,7 +10748,7 @@ LG:
       model: 'Solo LTE'
     - regex: 'LM-X210K'
       model: 'X2'
-    - regex: 'LG-(?:K580|F690L)'
+    - regex: 'LG-(?:K580|F690[LS])'
       model: 'X Cam'
     - regex: 'LG-(?:SP320|M32[27])'
       model: 'X Charge'
@@ -10920,7 +10930,7 @@ LG:
       model: 'Optimus Vu'
     - regex: '(?:LG-)?P880'
       model: 'Optimus 4X HD'
-    - regex: '(?:LG-)?(H340n?|H324)'
+    - regex: '(?:LG-)?(H340n?|H32[04])'
       model: 'Leon'
     - regex: '(?:LG-)?H342|LGMS345'
       model: 'Leon 4G LTE'
@@ -10942,6 +10952,9 @@ LG:
       model: 'Lucid 2'
     - regex: 'VS810PP'
       model: 'Transpyre'
+    - regex: 'LG-D838'
+      model: 'G Pro 2'
+
     - regex: 'LM-F100N?(?:[);/ ]|$)'
       device: 'phablet'
       model: 'WING'
@@ -12159,7 +12172,7 @@ Motorola:
       model: 'Droid RAZR D3'
     - regex: '(?:MOT-|Motorola-)?XT925'
       model: 'Droid RAZR HD'
-    - regex: '(?:MOT-|Motorola-)?XT102[12]'
+    - regex: '(?:MOT-|Motorola-)?(?:XT102[12]|XT830C)'
       model: 'Moto E'
     - regex: '(?:MOT-|Motorola-)?XT1706'
       model: 'Moto E3 Power'
@@ -17516,12 +17529,14 @@ Tecno Mobile:
       model: 'Spark 6 Air'
     - regex: 'TECNO[ _]KE5[jk]?(?:[);/ ]|$)'
       model: 'Spark 6 Go'
-    - regex: 'TECNO[ _]KF6[nmjk]?(?:[);/ ]|$)'
+    - regex: 'TECNO[ _](?:KF6[nmjk]?|PR651H?)(?:[);/ ]|$)'
       model: 'Spark 7'
     - regex: 'TECNO[ _]KF8(?:[);/ ]|$)'
       model: 'Spark 7 Pro'
     - regex: 'TECNO[ _]KF7j(?:[);/ ]|$)'
       model: 'Spark 7P'
+    - regex: 'TECNO[ _]KG6(?:[);/ ]|$)'
+      model: 'Spark 8'
     - regex: 'TECNO[ _]KC1h(?:[);/ ]|$)'
       model: 'Spark Go'
     - regex: 'TECNO[ _]KC1(?:[);/ ]|$)'
@@ -18834,7 +18849,7 @@ Wink:
 
 # Wiko (wikomobile.com)
 Wiko:
-  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna|lPlus)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?! Plus)(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 (?:Go|Plus)|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C8[06]0|K[346]00|P130|P200|C200SN)|WC300|W-(?:V7[23]0|V745|V8[30]0|P[36]11|K420|K510S?|K560|K130|K380|K610)-(?:TMV|TIM|TVM|EEA|SUN|SWI|OPE|BYT|DU|TH)|WIM Lite|W-K360-TV|W-V600|W-V750BN|W-K200|W-U300|U307AS|CINK PEAX 2|HIGHWAY PURE|C210AE|v3913'
+  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna|lPlus)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?! Plus)(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 (?:Go|Plus)|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C8[06]0|K[346]00|P130|P200|C200SN)|WC300|W-(?:V7[23]0|V745|V8[30]0|P[36]11|K420|K510S?|K560|K130|K380|K610)-(?:TMV|TIM|TVM|EEA|SUN|SWI|OPE|BYT|DU|T[HV])|WIM Lite|W-K360-TV|W-V6[08]0|W-V750BN|W-K200|W-U300|U307AS|CINK PEAX 2|HIGHWAY PURE|C210AE|v3913'
   device: 'smartphone'
   models:
     - regex: '(?:WIKO-)?W-V745'
@@ -19015,6 +19030,8 @@ Wiko:
       model: 'Y62'
     - regex: 'W-V720-(?:EEA|OPE|SUN)'
       model: 'Y80'
+    - regex: 'W-V680'
+      model: 'Y81'
     - regex: 'W-P311-(?:EEA|OPE|TVM)'
       model: 'View 3'
     - regex: 'W-P611-(?:EEA|OPE)'
@@ -19147,7 +19164,7 @@ X-View:
 
 # POCO (sub brand Xiaomi)
 POCO:
-  regex: '(?:POCO[ _](?:X[23]|F2 PRO|M[32]|F3)|M2010J19C[GI]|M2007J20C[ITG]|M2012K11AG|M2006C3MI|M2004J19PI|M2102J20S[GI]|M2103K19P[GY]|21061110AG|M2104K10I)(?:[);/ ]|$)'
+  regex: '(?:POCO[ _](?:X[23]|F2 PRO|M[32]|F3)|M2010J19C[GI]|M2007J20C[ITG]|M2012K11AG|M2006C3MI|M2004J19PI|M2102J20S[GI]|M2103K19P[GY]|21091116AG|21061110AG|M2104K10I)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'POCO X2(?:[);/ ]|$)'
@@ -19160,6 +19177,8 @@ POCO:
       model: 'M3 Pro 5G'
     - regex: 'POCO M([23]) Pro(?:[);/ ]|$)'
       model: 'M$1 Pro'
+    - regex: '21091116AG'
+      model: 'M4 Pro 5G'
     - regex: '(?:M2010J19C[GI]|POCO M3)(?:[);/ ]|$)'
       model: 'M3'
     - regex: '(?:M2007J20C[GT]|POCO X3 NFC)(?:[);/ ]|$)'
@@ -20962,6 +20981,8 @@ Inoi:
     - regex: 'inoiPad 2\+32 Wi-Fi\+3G'
       device: 'tablet'
       model: 'Pad 2+32'
+    - regex: 'INOI easyphone'
+      model: 'Easy Phone'
     - regex: 'INOI (2|5) Lite (2019|2021)'
       model: '$1 Lite ($2)'
     - regex: 'INOI[_ ]([13])[_ ]LITE'
@@ -23803,7 +23824,7 @@ Winmax:
 
 # Zebra (zebra.com)
 Zebra:
-  regex: ' (TC5[16]|TC2[05]|TC75|TC7[05]x|TC700H)(?:[);/ ]|$)'
+  regex: ' (TC5[16]|TC2[056]|TC75|TC7[05]x|TC700H)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
 
@@ -25821,6 +25842,12 @@ Epson:
   regex: 'Projector(?:[);/ ]|$)'
   device: 'peripheral'
   model: 'HA14A LCD Projector' # sti6200-d101
+
+# Awow or AWOW
+Awow:
+  regex: '(UTBook)'
+  device: 'tablet'
+  model: '$1'
 
 # Devices with undectable brand, but detectable model
 Unknown:
