feat(device) detect brand NUU Mobile model: A10L (N5502L) feat(device) detect brand Lava model: Z2 (LMG01) feat(device) detect brand TechPad model: M5 Go
feat(device) added test for brand Samsung model: Galaxy S9 (SM-G960U1, SM-G960U, SM-G9600, SM-G960W)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9757,6 +9757,8 @@ Lava:
       model: 'Z61'
     - regex: 'LMX06(?:[);/ ]|$)'
       model: 'Z6'
+    - regex: 'LMG01(?:[);/ ]|$)'
+      model: 'Z2'
     - regex: 'Z60s(?:[);/ ]|$)'
       model: 'Z60s'
     - regex: 'LE9920[ _]P(?:[);/ ]|$)'
@@ -12920,7 +12922,7 @@ Nomi:
 
 # NUU Mobile
 NUU Mobile:
-  regex: 'NUU_|(?:(?:N(5702|500[12])L|S6001L|[SN]5501L)|A6L-[CG])(?:[);/ ]|$)'
+  regex: 'NUU_|(?:(?:N(5702|500[12])L|S6001L|[SN]5501L)|A6L-[CG]|N5502L)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'NUU_A([13])'
@@ -12939,6 +12941,8 @@ NUU Mobile:
       model: 'A5L'
     - regex: 'N5002L'
       model: 'A7L'
+    - regex: 'N5502L'
+      model: 'A10L'
     - regex: '(N5001L|A6L-[CG])(?:[);/ ]|$)'
       model: '$1'
 
@@ -17595,7 +17599,7 @@ Tecno Mobile:
 
 # TechPad (techpad.mx)
 TechPad:
-  regex: 'Tech[ _]?pad|XTAB[ _-]|(?:3G_16|Dual C1081HD|S813G|NOTE[_ ]4CAM)(?:[);/ ]|$)'
+  regex: 'Tech[ _]?pad|XTAB[ _-]|(?:3G_16|Dual C1081HD|S813G|NOTE[_ ]4CAM|M5Go)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'S813G'
@@ -17616,12 +17620,18 @@ TechPad:
       model: 'XTAB C1081HD'
     - regex: 'XTAB[ _-]([^/;]+) Build'
       model: 'XTAB $1'
+
+    - regex: 'M5Go'
+      device: 'smartphone'
+      model: 'M5 Go'
     - regex: 'NOTE 4CAM'
       device: 'smartphone'
       model: 'Note 4 Cam'
+
     - regex: 'Tech_Pad_Kaios_One_3G'
       device: 'feature phone'
       model: 'Kaios One 3G'
+
     - regex: 'Tech ?pad[ _-]([^/;)]+)(?: Build|[;)])'
       model: '$1'
       device: 'smartphone'
