feat(device) detect brand Inoi Mobile model: Pad Mini 1+16 WiFi feat(device) detect brand AllDocube model: iPlay 8T

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4866,7 +4866,7 @@ Crosscall:
 
 # AllDocube (alldocube.com)
 AllDocube:
-  regex: '(?:T1001XS?|T1006S?|iPlay_[234]0|U1006H?|iPlay8|iPlay30|iPlay_40H|iPlay20S)(?:[);/ ]|$)'
+  regex: '(?:T1001XS?|T1006S?|iPlay_[234]0|U1006H?|iPlay8|iPlay_8T|iPlay30|iPlay_40H|iPlay20S)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'T1001XS(?:[);/ ]|$)'
@@ -4879,7 +4879,7 @@ AllDocube:
       model: 'M5X'
     - regex: 'U1006H?(?:[);/ ]|$)'
       model: 'iPlay 10 Pro 10.1"'
-    - regex: 'iPlay_?([234]0|8|40H|20s)(?:[);/ ]|$)'
+    - regex: 'iPlay_?([234]0|8T?|40H|20s)(?:[);/ ]|$)'
       model: 'iPlay $1'
 
 # Cube (short name Alldocube)
@@ -17620,14 +17620,14 @@ TechPad:
       model: 'XTAB C1081HD'
     - regex: 'XTAB[ _-]([^/;]+) Build'
       model: 'XTAB $1'
-
+    # explicit smartphone models
     - regex: 'M5Go'
       device: 'smartphone'
       model: 'M5 Go'
     - regex: 'NOTE 4CAM'
       device: 'smartphone'
       model: 'Note 4 Cam'
-
+    # explicit feature phone models
     - regex: 'Tech_Pad_Kaios_One_3G'
       device: 'feature phone'
       model: 'Kaios One 3G'
@@ -20991,6 +20991,9 @@ Inoi:
     - regex: 'inoiPad 2\+32 Wi-Fi\+3G'
       device: 'tablet'
       model: 'Pad 2+32'
+    - regex: 'inoiPad mini 1\+16 Wi-Fi'
+      device: 'tablet'
+      model: 'Pad Mini 1+16 WiFi'
     - regex: 'INOI easyphone'
       model: 'Easy Phone'
     - regex: 'INOI (2|5) Lite (2019|2021)'
