Improves detection for Beamrise

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2448,6 +2448,15 @@
     engine_version: "535.8"
     family: Chrome
 -
+  user_agent: Mozilla/5.0 (Windows NT 5.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/31.0.1650.57 Beamrise/31.0.1650.7639 Safari/537.36
+  client:
+    type: browser
+    name: Beamrise
+    version: 31.0.1650.7639
+    engine: Blink
+    engine_version: ""
+    family: Chrome
+-
   user_agent: Faux/20151018 CFNetwork/808.1.4 Darwin/16.1.0
   client:
     type: browser
