Improves detection for Iron

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -819,6 +819,15 @@
     engine_version: "537.36"
     family: Chrome
 -
+  user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/44.0.2350.0 Iron/44.0.2350.0 Safari/537.36
+  client:
+    type: browser
+    name: Iron
+    version: 44.0.2350.0
+    engine: Blink
+    engine_version: ""
+    family: Chrome
+-
   user_agent: Mozilla/5.0 (iPhone; CPU OS 8_0 like Mac OS X) AppleWebKit/538.34.9 (KHTML, like Gecko) Mobile/isivioo
   client:
     type: browser
