--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1512,6 +1512,8 @@
   version: '$1'
   engine:
     default: 'WebKit'
+    versions:
+      28: 'Blink'
 
 - regex: 'Iron(?:/(\d+[\.\d]+))?'
   name: 'Iron'
