Improves detection for UBrowser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2272,9 +2272,9 @@
   client:
     type: browser
     name: UBrowser
-    version: "5.5.5701.114"
-    engine: WebKit
-    engine_version: "537.36"
+    version: 5.5.5701.114
+    engine: Blink
+    engine_version: ""
     family: Chrome
 -
   user_agent: 'Mozilla/5.0 (Linux; U; Android 2.3.5; zh-cn; SHP-SH330T/V03.03; 320*480; CTC/2.0) eZBrowser/1.0'
