--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2480,8 +2480,8 @@
     type: browser
     name: Iron
     version: "77.0.4000.0"
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
     family: Chrome
 -
   user_agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/602.1 (KHTML, like Gecko) splash Version/10.0 Safari/602.1
