--- a/Tests/fixtures/smartphone-10.yml
+++ b/Tests/fixtures/smartphone-10.yml
@@ -1958,8 +1958,8 @@
     platform: ""
   client:
     type: browser
-    name: IBrowse
-    version: ""
+    name: iBrowser Mini
+    version: "2.8"
     engine: ""
     engine_version: ""
   device:
