Change regex for iBrowser

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1745,13 +1745,9 @@
   version: '$1'
 
 # iBrowser (https://www.goibibo.com/)
-- regex: 'iBrowser/(\d+\.\d+)'
+- regex: 'iBrowser/(\d+\.[.\d]+)?'
   name: 'iBrowser'
   version: '$1'
-
-- regex: 'iBrowser/'
-  name: 'iBrowser'
-  version: ''
 
 #IBrowse
 - regex: 'IBrowse(?:[ /](\d+[\.\d]+))?'
