Rename Huawei Browser for PC to Huawei Browser

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -793,9 +793,9 @@
   engine:
     default: 'Blink'
 
-# Huawei Browser for PC
+# Huawei Browser
 - regex: 'HBPC/(\d+[\.\d]+)'
-  name: 'Huawei Browser for PC'
+  name: 'Huawei Browser'
   version: '$1'
   engine:
     default: 'Blink'
