--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -4062,7 +4062,7 @@
   user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.107 Safari/537.36 HBPC/11.0.7.301
   client:
     type: browser
-    name: Huawei Browser for PC
+    name: Huawei Browser
     version: 11.0.7.301
     engine: Blink
     engine_version: ""
