Rename Huawei Browser to Huawei Browser Mobile

--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -6106,7 +6106,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.0.300
     engine: Blink
     engine_version: ""
