--- a/Tests/fixtures/smartphone-19.yml
+++ b/Tests/fixtures/smartphone-19.yml
@@ -1033,7 +1033,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.0.3.304
     engine: Blink
     engine_version: ""
@@ -1051,7 +1051,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 10.0.2.331
     engine: Blink
     engine_version: ""
@@ -1069,7 +1069,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.0.4.300
     engine: Blink
     engine_version: ""
@@ -1087,7 +1087,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.0.3.304
     engine: Blink
     engine_version: ""
@@ -2797,7 +2797,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.0.3.304
     engine: Blink
     engine_version: ""
