--- a/Tests/fixtures/smartphone-26.yml
+++ b/Tests/fixtures/smartphone-26.yml
@@ -9277,7 +9277,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.0.304
     engine: Blink
     engine_version: ""
