--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -3624,7 +3624,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.5.310
     engine: Blink
     engine_version: ""
@@ -3642,7 +3642,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.4.301
     engine: Blink
     engine_version: ""
@@ -3660,7 +3660,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.5.310
     engine: Blink
     engine_version: ""
@@ -3678,7 +3678,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.0.6.305
     engine: Blink
     engine_version: ""
@@ -3696,7 +3696,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.5.310
     engine: Blink
     engine_version: ""
@@ -3714,7 +3714,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.5.310
     engine: Blink
     engine_version: ""
@@ -3732,7 +3732,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.5.310
     engine: Blink
     engine_version: ""
@@ -3750,7 +3750,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.5.301
     engine: Blink
     engine_version: ""
@@ -3768,7 +3768,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.5.310
     engine: Blink
     engine_version: ""
@@ -3786,7 +3786,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.4.301
     engine: Blink
     engine_version: ""
@@ -5188,7 +5188,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.1.310
     engine: Blink
     engine_version: ""
@@ -5206,7 +5206,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.3.300
     engine: Blink
     engine_version: ""
@@ -5224,7 +5224,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.2.301
     engine: Blink
     engine_version: ""
@@ -5242,7 +5242,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.4.301
     engine: Blink
     engine_version: ""
@@ -5260,7 +5260,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.4.301
     engine: Blink
     engine_version: ""
@@ -5456,7 +5456,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.5.310
     engine: Blink
     engine_version: ""
@@ -5474,7 +5474,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.4.301
     engine: Blink
     engine_version: ""
