--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -786,9 +786,9 @@
   engine:
     default: 'Blink'
 
-# Huawei Browser
+# Huawei Browser Mobile
 - regex: 'HuaweiBrowser(?:/(\d+[\.\d]+))?'
-  name: 'Huawei Browser'
+  name: 'Huawei Browser Mobile'
   version: '$1'
   engine:
     default: 'Blink'
