--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2163,7 +2163,7 @@
   user_agent: Mozilla/5.0 (Linux; Android 9; VOG-L29 Build/HUAWEIVOG-L29) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/70.0.3538.64 HuaweiBrowser/10.0.1.332 Mobile Safari/537.36
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: "10.0.1.332"
     engine: Blink
     engine_version: ""
@@ -4062,7 +4062,7 @@
   user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.107 Safari/537.36 HBPC/11.0.7.301
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.0.7.301
     engine: Blink
     engine_version: ""
