--- a/Tests/fixtures/smartphone-27.yml
+++ b/Tests/fixtures/smartphone-27.yml
@@ -1175,7 +1175,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.5.310
     engine: Blink
     engine_version: ""
@@ -1211,7 +1211,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.4.301
     engine: Blink
     engine_version: ""
@@ -1229,7 +1229,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.5.310
     engine: Blink
     engine_version: ""
@@ -1247,7 +1247,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.1.310
     engine: Blink
     engine_version: ""
@@ -1967,7 +1967,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.5.310
     engine: Blink
     engine_version: ""
@@ -4519,7 +4519,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.4.301
     engine: Blink
     engine_version: ""
@@ -6174,7 +6174,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.4.302
     engine: Blink
     engine_version: ""
@@ -7412,7 +7412,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.3.300
     engine: Blink
     engine_version: ""
@@ -7430,7 +7430,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.5.310
     engine: Blink
     engine_version: ""
@@ -7466,7 +7466,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 10.1.2.320
     engine: Blink
     engine_version: ""
@@ -8024,7 +8024,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.5.310
     engine: Blink
     engine_version: ""
@@ -8042,7 +8042,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.5.310
     engine: Blink
     engine_version: ""
@@ -8060,7 +8060,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.5.310
     engine: Blink
     engine_version: ""
@@ -8078,7 +8078,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.4.301
     engine: Blink
     engine_version: ""
@@ -8132,7 +8132,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.0.7.302
     engine: Blink
     engine_version: ""
@@ -8150,7 +8150,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.2.301
     engine: Blink
     engine_version: ""
@@ -8168,7 +8168,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.1.310
     engine: Blink
     engine_version: ""
@@ -8186,7 +8186,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.1.302
     engine: Blink
     engine_version: ""
@@ -8204,7 +8204,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.5.310
     engine: Blink
     engine_version: ""
@@ -8384,7 +8384,7 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.0.8.305
     engine: Blink
     engine_version: ""
