--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1739,12 +1739,12 @@
   engine:
     default: 'WebKit'
 
-# iBrowser Mini (https://www.goibibo.com/)
+# iBrowser Mini
 - regex: 'iBrowser/Mini(\d+\.\d+)'
   name: 'iBrowser Mini'
   version: '$1'
 
-# iBrowser (https://www.goibibo.com/)
+# iBrowser
 - regex: 'iBrowser/(\d+\.[.\d]+)?'
   name: 'iBrowser'
   version: '$1'
